--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     implementation 'org.eclipse.collections:eclipse-collections:13.0.0'
     implementation 'javax.cache:cache-api:1.1.1'
     implementation 'org.ehcache:ehcache:3.11.1'
+    implementation 'javax.xml.bind:jaxb-api:2.3.1'
+    runtimeOnly 'org.glassfish.jaxb:jaxb-runtime:2.3.9'
 
     runtimeOnly 'com.h2database:h2:2.4.240'
 
@@ -45,12 +47,21 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
-    testImplementation("io.rest-assured:rest-assured:5.5.6")
-    testImplementation("io.rest-assured:json-path:5.5.6")
-    testImplementation("io.rest-assured:xml-path:5.5.6")
+    testImplementation("io.rest-assured:rest-assured:6.0.0") {
+        exclude group: 'io.rest-assured', module: 'json-path'
+        exclude group: 'io.rest-assured', module: 'xml-path'
+    }
+    testImplementation("io.rest-assured:json-path:6.0.0") {
+        exclude group: 'io.rest-assured', module: 'rest-assured-common'
+    }
+    testImplementation("io.rest-assured:xml-path:6.0.0") {
+        exclude group: 'io.rest-assured', module: 'rest-assured-common'
+    }
+    testImplementation("io.rest-assured:rest-assured-common:6.0.0")
     testImplementation("org.assertj:assertj-core:3.27.6")
-    testImplementation("com.approvaltests:approvaltests:25.7.0")
+    testImplementation("com.approvaltests:approvaltests:26.0.0")
     testImplementation("com.larseckart:junit-tcr-extensions:1.0.0")
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
 
 test {
